# VLM

./: .gitignore  CMakeLists.txt  HTail.arp  README.md  VLM_ADS.c  VTail.arp  drawwing.m  infile.arp  outfile.m  run.py
CMake/: FindNUMPY.cmake  VLMMacros.cmake  msys2.cmake
pythonVLM/: VLM_driver.py  VLM_inputs.py  VLM_testing.py  VLM_utilities.py  __init__.py
src/: CMakeLists.txt  VLM_ADS.c  VLM_ADS.h  VLM_ADS.i  numpy.i  vAirfoil.c  vAirfoil.h  vAlgebra.c  vAlgebra.h  vAssignValues.c  vAssignValues.h  vControl.c  vControl.h  vForce.c  vForce.h  vGeometry.c  vGeometry.h  vGeometrySetup.c  vGeometrySetup.h  vHTail.c  vHTail.h  vInfluence.c  vInfluence.h  vInput.c  vInput.h  vIteration.c  vIteration.h  vLiftsurf.h  vNeighbours.c  vNeighbours.h  vOutput.c  vOutput.h  vPanel.c  vPanel.h  vRHS.c  vRHS.h  vSetup.c  vSetup.h  vSpanwisePanels.c  vSpanwisePanels.h  (+13 more)
tests/: CMakeLists.txt
tests/Bird_Wing/: Wing-4Sct.arp  baseline_fluid.py  bird_wing.py  deflected_fluid.py  infile_baseline.arp  infile_no_yaw.arp  infile_no_yaw_deflection.arp  no_yaw_fluid.py
tests/Flat_Plate/: zero_angle_fluid.py
tests/Sample_Aircraft/: ga.py  ga_fluid.py
tests/Selig_Airfoils/: TsAGI_fluid.py
