# Copyright 2019 University of Liège
# CMake file for the VLM source
# Configure the compilation of the C core of the VLM code.
#
# Authors : M. SANCHEZ MARTINEZ.

FILE(GLOB SRCS *.h v*.c) # Stores these files in variable SRCS
FILE(GLOB SWIGSRCS *.i)


ADD_LIBRARY(VLMCore STATIC ${SRCS})

ADD_EXECUTABLE(VLM VLM_ADS.c)

TARGET_LINK_LIBRARIES(VLM VLMCore)

set(TARGS VLM VLMCore)


IF(${CMAKE_VERSION} VERSION_LESS "3.8.0" AND PYTHON_WRAPPER)
  SET(CMAKE_SWIG_OUTDIR "${PROJECT_SOURCE_DIR}/bin")
  SWIG_ADD_MODULE(PyVLM python ${SWIGSRCS} ${SRCS})
  SWIG_LINK_LIBRARIES(PyVLM ${PYTHON_LIBRARIES})
  set(TARGS ${TARGS} _PyVLM)
ELSEIF(PYTHON_WRAPPER)
  SWIG_ADD_LIBRARY(PyVLM
                   LANGUAGE python
                   OUTPUT_DIR "${PROJECT_SOURCE_DIR}/bin"
                   SOURCES ${SWIGSRCS} ${SRCS})
  SWIG_LINK_LIBRARIES(PyVLM ${PYTHON_LIBRARIES})
  set(TARGS ${TARGS} _PyVLM)
ENDIF()

install (TARGETS ${TARGS} DESTINATION "${PROJECT_SOURCE_DIR}/bin")

if(CMAKE_C_COMPILER_ID STREQUAL "GNU")
    TARGET_LINK_LIBRARIES(VLM m) # Adds -lm option for linking
endif(CMAKE_C_COMPILER_ID STREQUAL "GNU")

